--- a/Scripts/model_use.ipynb
+++ b/Scripts/model_use.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "e73e6fe7",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,7 @@
     "import torch\n",
     "import warnings\n",
     "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "\n",
     "from collections import Counter"
    ]
@@ -34,13 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "e366e61d",
    "metadata": {},
    "outputs": [],
    "source": [
     "MODELS_DIR = \"../Models\"\n",
-    "DATA_PATH = \"../Data/shakespeare.txt\"\n",
+    "DATA_PATH = \"../Data/shakespeare_extended.txt\"\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "1b15ec0e",
    "metadata": {},
    "outputs": [],
@@ -64,25 +65,26 @@
     "    def __init__(self, vocab_size, embed_dim, num_heads, hidden_dim, num_layers, seq_len):\n",
     "\n",
     "        super(SimpleTransformer, self).__init__()\n",
-    "\n",
     "        self.embedding = nn.Embedding(vocab_size, embed_dim)\n",
     "        self.position_embedding = nn.Embedding(seq_len, embed_dim)\n",
     "\n",
     "        self.transformer_blocks = nn.ModuleList([\n",
     "            nn.TransformerEncoderLayer(\n",
-    "                d_model=embed_dim, nhead=num_heads, dim_feedforward=hidden_dim)\n",
-    "                    for _ in range(num_layers)])\n",
-    "\n",
+    "                d_model=embed_dim, nhead=num_heads, dim_feedforward=hidden_dim\n",
+    "                    ) for _ in range(num_layers)])\n",
+    "        \n",
+    "        self.norm = nn.LayerNorm(embed_dim)\n",
     "        self.fc = nn.Linear(embed_dim, vocab_size)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        \n",
+    "\n",
     "        positions = torch.arange(0, x.size(1), device=x.device).unsqueeze(0)\n",
     "        x = self.embedding(x) + self.position_embedding(positions)\n",
     "\n",
     "        for block in self.transformer_blocks:\n",
     "            x = block(x)\n",
     "\n",
+    "        x = self.norm(x)\n",
     "        return self.fc(x)"
    ]
   },
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "38e5ae50",
    "metadata": {},
    "outputs": [],
@@ -130,30 +132,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "11f79971",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate(model, prompt, word_to_id, id_to_word, seq_len, max_length=50, temperature=1.0, top_k=10):\n",
+    "def advanced_generate(model, prompt, word_to_id, id_to_word, seq_len, max_length=50, temperature=1.0, top_k=0, top_p=0.9, device=DEVICE):\n",
     "\n",
     "    model.eval()\n",
     "    input_ids = tokenize(prompt, word_to_id)[-seq_len:]\n",
-    "    input_tensor = torch.tensor(input_ids, device=DEVICE).unsqueeze(0)\n",
+    "    input_tensor = torch.tensor(input_ids, device=device).unsqueeze(0)\n",
     "\n",
     "    for _ in range(max_length):\n",
+    "\n",
     "        with torch.no_grad():\n",
+    "            logits = model(input_tensor)[:, -1, :] / temperature\n",
+    "            probs = F.softmax(logits, dim=-1)\n",
     "\n",
-    "            output = model(input_tensor)\n",
-    "            logits = output[:, -1, :] / temperature\n",
+    "            if top_k > 0:\n",
     "\n",
-    "            top_k_vals, top_k_idxs = torch.topk(logits, top_k)\n",
-    "            probs = torch.softmax(top_k_vals, dim=-1)\n",
+    "                top_k_values, top_k_indices = torch.topk(probs, top_k)\n",
+    "                mask = torch.zeros_like(probs).scatter_(1, top_k_indices, 1.0)\n",
     "\n",
-    "            next_token = top_k_idxs[0, torch.multinomial(probs, 1).item()].unsqueeze(0)\n",
+    "                probs = probs * mask\n",
+    "                probs = probs / probs.sum(dim=-1, keepdim=True)\n",
     "\n",
-    "        input_tensor = torch.cat([input_tensor, next_token.unsqueeze(0)], dim=1)\n",
-    "        input_tensor = input_tensor[:, -seq_len:]\n",
+    "            if top_p < 1.0:\n",
+    "\n",
+    "                sorted_probs, sorted_indices = torch.sort(probs, descending=True)\n",
+    "                cumulative_probs = torch.cumsum(sorted_probs, dim=-1)\n",
+    "                sorted_mask = cumulative_probs < top_p\n",
+    "\n",
+    "                sorted_mask[..., 1:] = sorted_mask[..., :-1].clone()\n",
+    "                sorted_mask[..., 0] = 1\n",
+    "\n",
+    "                final_mask = torch.zeros_like(probs).scatter_(1, sorted_indices, sorted_mask.float())\n",
+    "\n",
+    "                probs = probs * final_mask\n",
+    "                probs = probs / probs.sum(dim=-1, keepdim=True)\n",
+    "\n",
+    "            next_token = torch.multinomial(probs, num_samples=1)\n",
+    "\n",
+    "            input_tensor = torch.cat([input_tensor, next_token], dim=1)\n",
+    "            input_tensor = input_tensor[:, -seq_len:]\n",
     "\n",
     "    generated_ids = input_tensor[0].tolist()\n",
     "    \n",
@@ -170,24 +191,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "75086890",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Available Models:\n",
-      "1. shakespeare_LLM_20250417-110810.pth\n",
-      "2. shakespeare_LLM_20250417-123315.pth\n",
-      "\n",
-      "You are now speaking with Shakespeare.\n",
-      "Type 'quit' to exit.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def select_model():\n",
     "\n",
@@ -195,15 +202,15 @@
     "\n",
     "    if not model_files:\n",
     "        raise FileNotFoundError(\"No .pth model files found in ../Models folder.\")\n",
-    "\n",
+    "    \n",
     "    print(\"Available Models:\")\n",
     "\n",
     "    for i, f in enumerate(model_files):\n",
     "        print(f\"{i + 1}. {f}\")\n",
     "    \n",
     "    while True:\n",
-    "        try:\n",
     "\n",
+    "        try:\n",
     "            choice = int(input(\"\\nChoose a model number: \"))\n",
     "\n",
     "            if 1 <= choice <= len(model_files):\n",
@@ -234,20 +241,20 @@
     "SEQ_LEN = settings[\"SEQ_LEN\"]\n",
     "\n",
     "vocab = build_vocab(DATA_PATH, VOCAB_SIZE)\n",
-    "word_to_id = vocab\n",
     "\n",
+    "word_to_id = vocab\n",
     "id_to_word = {i: w for w, i in vocab.items()}\n",
     "\n",
     "model = SimpleTransformer(\n",
     "\n",
-    "    vocab_size=settings[\"VOCAB_SIZE\"],\n",
+    "    vocab_size=VOCAB_SIZE,\n",
+    "\n",
     "    embed_dim=settings[\"EMBED_DIM\"],\n",
     "    num_heads=settings[\"NUM_HEADS\"],\n",
     "\n",
     "    hidden_dim=settings[\"HIDDEN_DIM\"],\n",
     "    num_layers=settings[\"NUM_LAYERS\"],\n",
-    "\n",
-    "    seq_len=settings[\"SEQ_LEN\"]).to(DEVICE)\n",
+    "    seq_len=SEQ_LEN).to(DEVICE)\n",
     "\n",
     "model.load_state_dict(torch.load(model_path, map_location=DEVICE, weights_only=True))\n",
     "model.eval()\n",
@@ -268,16 +275,7 @@
    "execution_count": null,
    "id": "e1a9575e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shakespeare: build wi’ his climbing high. and I had I will level to her stoop I will passed. I have my dug for methought you to my good lieutenant, enemies, and let your service. Bourbon, play at his amorous Soft, trim\n",
-      "Shakespeare: and all my good as you shall be my acquittance follows. BERTRAM. I have my quits to thy tide of your discontent? But I have strew’d clouds that he would you do not sleep. The word’s influence of your having.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "while True:\n",
     "\n",
@@ -288,10 +286,21 @@
     "        print(\"\\nFarewell, gentle soul.\")\n",
     "        break\n",
     "\n",
-    "    prompt = user_input\n",
-    "    response = generate(model, prompt, word_to_id, id_to_word, seq_len=SEQ_LEN, max_length=40, temperature=0.8)\n",
+    "    response = advanced_generate(\n",
     "\n",
-    "    print(\"Shakespeare:\", response[len(prompt):].strip())"
+    "        model=model,\n",
+    "        prompt=user_input,\n",
+    "        word_to_id=word_to_id,\n",
+    "\n",
+    "        id_to_word=id_to_word,\n",
+    "        seq_len=SEQ_LEN,\n",
+    "        max_length=40,\n",
+    "        \n",
+    "        temperature=0.8,\n",
+    "        top_k=40,\n",
+    "        top_p=0.9)\n",
+    "\n",
+    "    print(\"Shakespeare:\", response[len(user_input):].strip())"
    ]
   }
  ],
